	- Fix AI dropping bombs several hundred meters behind target.
- UI:
	- Add Japanese localization files thanks to user Taka005.
- Competition:
	- Add new GM Kill conditions for planes that have lost engines/weapons/set percentage of their parts and LandedKillTimer conditions for surface AIs that have found themselves in water/water AIs that have beached themselves/sunk.
- Countermeasures:
	- Add Acoustic Decoy CM support via 'countermeasureType = decoy'.
	- APS point defense target acquisition and assignment logic rewritten, APS will now semi-intelligently identify and distribute targets among guns in the PD network.
	- APS weapons now respect Fire Interval and Burst Length settings.
- Vessel Mover:
	- Make the vessel selection more resilient to corrupted vessel files/loadmeta.
	- Default the vessel selection window to using the VAB if the initial vessel is spawned through the launchpad.
- Weapons:
	- Missiles:
		- Fix some NREs when manually firing missiles.
		- Add new guidanceDelay field to allow setting a delay between missile launch and missile beginning to maneuver towards a target.
		- Dynamic Launch Range now uses missile EngageRange max instead of static launch range.
		- Improved launch behavior for missiles set to be fired at very short range.
		- Add LineOfSight check when firing missiles.
		- Fix torpedoes not working.
		- Missile/Bomb fratricide prevention now based on team instead of sourcevessel.
		- Add Salvo size slider to MultiMissile Launchers, enabled via the new MultiMissileLauncher .cfg 'setSalvoSize' bool.
		- Improve launch of missiles from reloadable rails.
		- Add new MultiMissileLauncher 'deploySpeed' field to set deploy animation duration.
		- Add intrinsic scaling option to MultiMissileLauncher for missile pods and the like, use new fields 'scaleTransformName' and 'lengthTransformName'
		- Fix issue with air-dropped torpedoes exploding on impact with the water despite being within their waterImpactTolearance.